@@ -21,6 +21,8 @@
  * 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
  */
 
+/* Java version of C/Java/C# abstraction macros */
+
 #define JAVA
 #define abool                   boolean
 #define FALSE                   false
@@ -29,8 +31,8 @@
 #define const
 #define CONST_LOOKUP(type, name) \
                                 private static final type[] name
-#define FILE_FUNC               private static
-#define ASAP_FUNC               private static
+#define PRIVATE_FUNC            private static
+#define PUBLIC_FUNC             private static
 #define PTR
 #define ADDRESSOF
 #define ARRAY                   []
